--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "git@github.com:Hanse/react-calendar"
   },
-  "main": "./dist/bundle.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "make test",
     "prepublish": "browserify -t [babelify --modules umd ] src/index.js -o dist/bundle.js",
