--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "type": "git",
     "url": "git@github.com:Hanse/react-calendar"
   },
-  "main": "./src/index.js",
+  "main": "./lib/index.js",
   "scripts": {
     "test": "make test",
-    "prepublish": "browserify -t [babelify --modules umd ] src/index.js -o dist/bundle.js",
+    "prepublish": "make publish",
+    "build": "browserify -t [babelify --modules umd ] src/index.js -o dist/bundle.js",
     "watch": "open examples/basic/index.html && cd examples/basic/ && npm run watch "
   },
   "author": "Hanse",
