--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "browserify -t babelify main.js -o bundle.js",
-    "watch": "open index.html && watch 'npm run build'"
+    "watch": "watch 'npm run build' ../../lib"
   },
   "author": "",
   "license": "MIT",
@@ -20,6 +20,7 @@
     "browserify": "^9.0.8",
     "gulp": "^3.8.11",
     "gulp-browserify": "^0.5.1",
+    "moment": "^2.10.2",
     "react": "^0.13.1",
     "reactify": "^1.0.0"
   }
